# yabs-cowsay

./: .gitignore  Pipfile  README.md  setup.cfg  yabs.yaml  yabs_cowsay.py
