[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
;universal = 1

[metadata]
# Please let's reserve the namespace ``yabs-TASKNAME`` for 'official'
# extensions.
# If you publish your own custom extension on PyPI, choose a name like
# `yabs-USER-TASKNAME` or similar:
name = yabs-cowsay

version = attr: yabs_cowsay.__version__
author = Martin Wendt
author_email = yabs@wwwendt.de
maintainer = Martin Wendt
maintainer_email = yabs@wwwendt.de
url = https://github.com/mar10/yabs-cowsay/
description = Add a 'cowsay' task to Yabs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = yabs, yabs-plugin
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    # Framework :: Yabs
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution

[options]
py_modules = 
    yabs_cowsay

install_requires =

[options.entry_points]
# Plugins are found by the 'yabs.tasks' namespace.
# The 'register()' function is then called by the plugin loader.
# The 'cowsay' name is used as yabs task type name-
yabs.tasks =
    cowsay = yabs_cowsay:register
